Nuevo modelo datos

--- a/app/src/main/res/layout/activity_edit_estudiante.xml
+++ b/app/src/main/res/layout/activity_edit_estudiante.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.unl.lapc.registrodocente.EditEstudianteActivity">
+    tools:context=".activity.EditEstudiante">
 
     <EditText
         android:id="@+id/txtCodigo"
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:hint="Código"
+        android:hint="Cédula"
         android:singleLine="true">
     <requestFocus />
     </EditText>
