--- a/app/src/main/res/layout/activity_edit_periodo.xml
+++ b/app/src/main/res/layout/activity_edit_periodo.xml
@@ -7,10 +7,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.unl.lapc.registrodocente.EditPeriodoActivity">
+    tools:context=".activity.EditPeriodo">
 
     <EditText
-        android:id="@+id/txtNombreEditPeriodo"
+        android:id="@+id/txtNombre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -19,4 +19,32 @@
         android:singleLine="true">
         <requestFocus />
     </EditText>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
+        android:ems="10"
+        android:id="@+id/txtEscala"
+        android:hint="Escala calificaciones"
+        android:layout_below="@+id/txtNombre"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <DatePicker
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/dpInicio"
+        android:layout_below="@+id/txtEscala"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <DatePicker
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/dpFin"
+        android:layout_below="@+id/dpInicio"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
