--- a/app/src/main/res/menu/menu_edit_periodo.xml
+++ b/app/src/main/res/menu/menu_edit_periodo.xml
@@ -1,17 +1,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.unl.lapc.registrodocente.EditPeriodoActivity">
+    tools:context=".activity.EditPeriodo">
+
     <item
-        android:id="@+id/action_save_periodo"
+        android:id="@+id/action_save"
         android:orderInCategory="100"
         android:title="Guardar"
         android:icon="@android:drawable/ic_menu_save"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/action_delete_periodo"
+        android:id="@+id/action_delete"
         android:orderInCategory="101"
         android:icon="@android:drawable/ic_menu_delete"
         android:title="Borrar"
         app:showAsAction="ifRoom" />
+
 </menu>
