--- a/app/src/main/res/menu/menu_periodos.xml
+++ b/app/src/main/res/menu/menu_periodos.xml
@@ -1,11 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.unl.lapc.registrodocente.PeriodosActivity">
+    tools:context=".activity.Periodos">
     <item
-        android:id="@+id/action_add_periodo"
+        android:id="@+id/action_add"
         android:orderInCategory="100"
         android:title="+"
         android:icon="@android:drawable/ic_input_add"
         app:showAsAction="ifRoom" />
+
 </menu>
