--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
 
     <color name="colorListItemPrimary">#117453</color>
     <color name="colorListItemSubtitle">#2f9b77</color>
+
+    <color name="colorListItemInactive">#444847</color>
+    <color name="colorListItemSubtitleInactive">#636665</color>
 </resources>
