--- a/app/src/main/res/layout/activity_clases.xml
+++ b/app/src/main/res/layout/activity_clases.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.unl.lapc.registrodocente.ClasesActivity">
+    tools:context=".activity.Clases">
 
     <ListView
         android:layout_width="wrap_content"
