--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.unl.lapc.registrodocente.MainActivity">
+    tools:context=".activity.Main">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
