--- a/app/src/main/res/layout/activity_main_clase.xml
+++ b/app/src/main/res/layout/activity_main_clase.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.unl.lapc.registrodocente.MainClaseActivity">
+    tools:context=".activity.MainClaseActivity">
 
     <include layout="@layout/content_main_clases"
         android:id="@+id/include" />
