--- a/app/src/main/res/layout/content_main_clases.xml
+++ b/app/src/main/res/layout/content_main_clases.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.unl.lapc.registrodocente.MainClaseActivity"
+    tools:context=".activity.MainClases"
     tools:showIn="@layout/activity_main_clase">
 
     <ListView
