--- a/app/src/main/res/layout/content_registro_asistencia.xml
+++ b/app/src/main/res/layout/content_registro_asistencia.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.unl.lapc.registrodocente.AsistanciasActivity"
+    tools:context=".activity.Asistancias"
     tools:showIn="@layout/activity_asistencias">
 
 
