--- a/app/src/main/res/menu/menu_asistencias.xml
+++ b/app/src/main/res/menu/menu_asistencias.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.unl.lapc.registrodocente.AsistanciasActivity">
+    tools:context=".activity.Asistancias">
     <item
         android:id="@+id/action_periodo_clase"
         android:orderInCategory="100"
@@ -10,7 +10,7 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/action_cancel_asistencia"
+        android:id="@+id/action_back"
         android:orderInCategory="100"
         android:title="Atras"
         android:icon="@android:drawable/ic_menu_revert"
