--- a/app/src/main/res/menu/menu_clases.xml
+++ b/app/src/main/res/menu/menu_clases.xml
@@ -1,9 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.unl.lapc.registrodocente.ClasesActivity">
+    tools:context=".activity.Clases">
     <item
-        android:id="@+id/action_add_clase"
+        android:id="@+id/action_add"
         android:orderInCategory="100"
         android:title="+"
         android:icon="@android:drawable/ic_input_add"
