--- a/app/src/main/res/menu/menu_edit_clase.xml
+++ b/app/src/main/res/menu/menu_edit_clase.xml
@@ -1,15 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.unl.lapc.registrodocente.EditPeriodoActivity">
+    tools:context=".activity.EditClase">
     <item
-        android:id="@+id/action_save_clase"
+        android:id="@+id/action_save"
         android:orderInCategory="100"
         android:title="Guardar"
         android:icon="@android:drawable/ic_menu_save"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/action_delete_clase"
+        android:id="@+id/action_delete"
         android:orderInCategory="101"
         android:icon="@android:drawable/ic_menu_delete"
         android:title="Borrar"
