--- a/app/src/main/res/menu/menu_main_clase.xml
+++ b/app/src/main/res/menu/menu_main_clase.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.unl.lapc.registrodocente.MainClaseActivity">
+    tools:context=".activity.MainClaseActivity">
     <item
         android:id="@+id/action_asistencias"
         android:orderInCategory="100"
