--- a/app/src/main/res/layout/activity_main_estudiantes.xml
+++ b/app/src/main/res/layout/activity_main_estudiantes.xml
@@ -7,9 +7,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".activity.MainClaseActivity">
+    tools:context=".activity.MainEstudiantes">
 
-    <include layout="@layout/content_main_clases"
+    <include layout="@layout/content_main_estudiantes"
         android:id="@+id/include" />
 
     <android.support.design.widget.FloatingActionButton
