--- a/app/src/main/res/menu/menu_main_estudiantes.xml
+++ b/app/src/main/res/menu/menu_main_estudiantes.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activity.MainClaseActivity">
+    tools:context=".activity.MainEstudiantes">
     <item
         android:id="@+id/action_asistencias"
         android:orderInCategory="100"
@@ -11,14 +11,14 @@
 
     <item
         android:id="@+id/action_notas"
-        android:orderInCategory="100"
+        android:orderInCategory="101"
         android:title="Notas"
         android:icon="@android:drawable/ic_menu_my_calendar"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_ord_apellido"
-        android:orderInCategory="100"
+        android:orderInCategory="102"
         android:title="Auto ordenar"
         android:icon="@android:drawable/ic_menu_sort_alphabetically"
         app:showAsAction="never" />
