--- a/app/src/main/res/layout/fragment_resumen_notas_parcial.xml
+++ b/app/src/main/res/layout/fragment_resumen_notas_parcial.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.FragmentResumenNotas">
+    tools:context=".fragment.FragmentResumenNotasParcial">
 
     <!-- TODO: Update blank fragment layout -->
     <TableLayout
