--- a/app/src/main/res/menu/drawer_main_notas.xml
+++ b/app/src/main/res/menu/drawer_main_notas.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_resumen"
+            android:icon="@android:drawable/ic_dialog_dialer"
+            android:title="Resumen notas" />
+    </group>
 <!--
     <group android:checkableBehavior="single">
         <item
