--- a/app/src/main/res/menu/menu_main_estudiantes.xml
+++ b/app/src/main/res/menu/menu_main_estudiantes.xml
@@ -1,20 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activity.MainEstudiantes">
-    <item
-        android:id="@+id/action_asistencias"
-        android:orderInCategory="100"
-        android:title="Asistencias"
-        android:icon="@android:drawable/ic_menu_today"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/action_notas"
-        android:orderInCategory="101"
-        android:title="Notas"
-        android:icon="@android:drawable/ic_menu_my_calendar"
-        app:showAsAction="ifRoom" />
+    tools:context=".fragment.FragmentEstudiantes">
 
     <item
         android:id="@+id/action_ord_apellido"
