--- a/app/src/main/res/layout/fragment_asistencias.xml
+++ b/app/src/main/res/layout/fragment_asistencias.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".activity.Asistancias">
+    tools:context=".fragment.FragmentAsistancias">
 
     <include layout="@layout/content_registro_asistencia"
         android:id="@+id/include" />
