--- a/app/src/main/res/menu/menu_asistencias.xml
+++ b/app/src/main/res/menu/menu_asistencias.xml
@@ -1,18 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activity.Asistancias">
+    tools:context=".fragment.FragmentAsistancias">
     <item
         android:id="@+id/action_periodo_clase"
         android:orderInCategory="100"
         android:title="Fecha"
         android:icon="@android:drawable/ic_menu_manage"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/action_back"
-        android:orderInCategory="100"
-        android:title="Atras"
-        android:icon="@android:drawable/ic_menu_revert"
         app:showAsAction="ifRoom" />
 </menu>
